Add meta tags, clean up config template, use decimal permissions

--- a/files/ldap.conf
+++ b/files/ldap.conf
@@ -1,21 +1,10 @@
-#
-# LDAP Defaults
-#
+# {{ ansible_managed }}
 
-# See ldap.conf(5) for details
-# This file should be world readable but not world writable.
-
-#BASE	dc=example,dc=com
 base dc=faveve, dc=uni-stuttgart, dc=de
 
-#URI	ldap://ldap.example.com ldap://ldap-master.example.com:666
 uri ldaps://ldap01.faveve.uni-stuttgart.de/ ldaps://ldap02.faveve.uni-stuttgart.de/
 
 ldap_version 3
-
-#SIZELIMIT	12
-#TIMELIMIT	15
-#DEREF		never
 
 pam_password crypt
 
