--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,6 @@
 galaxy_info:
   author: Markus Mroch (Mr. Pi)
-  description: Configures the client config for stuvus ldap
+  description: Configures the client config for stuvus LDAP
   company: stuvus (https://stuvus.uni-stuttgart.de)
 
   license: CC-BY-SA
@@ -16,7 +16,10 @@ galaxy_info:
         - artful
 
   galaxy_tags:
-    - stuvus
     - ldap
+    - ldap-client
+    - openldap
+    - public-key
+    - ldap.conf
 
 dependencies: []
