--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,10 +1,10 @@
 - name: Copy LDAP-Client config
-  copy:
+  template:
     src: ldap.conf
     dest: /etc/ldap/ldap.conf
     owner: root
     group: root
-    mode: "u=rw,g=r,o=r"
+    mode: 0644
 
 - name: Copy certificate for LDAP
   copy:
@@ -12,4 +12,4 @@
     dest: /etc/ssl/ldapCA.pem
     owner: root
     group: root
-    mode: "u=rw,g=r,o=r"
+    mode: 0644
