Use general certificate store; Enforce cert check

--- a/templates/ldap.conf
+++ b/templates/ldap.conf
@@ -2,13 +2,13 @@
 
 base dc=faveve, dc=uni-stuttgart, dc=de
 
-uri ldaps://ldap01.faveve.uni-stuttgart.de/ ldaps://ldap02.faveve.uni-stuttgart.de/
+uri ldaps://ldap01.faveve.uni-stuttgart.de/
 
 ldap_version 3
 
 pam_password crypt
 
 # TLS certificates (needed for GnuTLS)
-TLS_CACERT	/etc/ssl/ldapCA.pem
-TLS_REQCERT 	allow
+TLS_CACERT	/etc/ssl/certs/ca-certificates.crt
+TLS_REQCERT demand
 nss_initgroups_ignoreusers backup,bin,daemon,games,gnats,irc,landscape,libuuid,list,lp,mail,man,messagebus,news,ntp,proxy,root,root-afaul,root-fkretschmer,root-jochs,root-joshi,root-mdornbach,root-mpaul,root-nguyen,root-sgaiser,root-tczempik,smmsp,smmta,sshd,statd,sync,sys,syslog,uucp,whoopsie,www-data
