ldap.conf: Use variables instead of hardcoding

--- a/templates/ldap.conf
+++ b/templates/ldap.conf
@@ -1,14 +1,15 @@
 # {{ ansible_managed }}
 
-base dc=faveve, dc=uni-stuttgart, dc=de
+BASE {{ ldap_client_base }}
 
-uri ldaps://ldap01.faveve.uni-stuttgart.de/
+URI {{ ldap_client_uris | join(" ") }}
+LDAP_VERSION {{ ldap_client_ldap_version }}
 
-ldap_version 3
-
-pam_password crypt
+PAM_PASSWORD {{ ldap_client_pam_password }}
 
 # TLS certificates (needed for GnuTLS)
-TLS_CACERT	/etc/ssl/certs/ca-certificates.crt
-TLS_REQCERT demand
-nss_initgroups_ignoreusers backup,bin,daemon,games,gnats,irc,landscape,libuuid,list,lp,mail,man,messagebus,news,ntp,proxy,root,root-afaul,root-fkretschmer,root-jochs,root-joshi,root-mdornbach,root-mpaul,root-nguyen,root-sgaiser,root-tczempik,smmsp,smmta,sshd,statd,sync,sys,syslog,uucp,whoopsie,www-data
+TLS_CACERT {{ ldap_client_tls_cacert }}
+# This dir is checked if the file doesn't contain the signing CA
+TLS_CACERTDIR {{ ldap_client_tls_cacertdir }}
+TLS_REQCERT {{ ldap_client_tls_reqcert }}
+NSS_INITGROUPS_IGNOREUSERS {{ ldap_client_nss_initgroups_ignoreusers | join(",") }}
